fix collapse not exposing area under

--- a/widgets/COETree/treeCOE.widget.scss
+++ b/widgets/COETree/treeCOE.widget.scss
@@ -123,73 +123,62 @@
   background-color : transparent;
 
 }
-.uicontainer {
+.tree-uicontainer {
 
   background-color : transparent;
   display : flex;
   flex-direction : column;
-  position : absolute; //Allowed values: static, absolute, fixed, relative, sticky, initial, inherit;  
+  position : fixed; //Allowed values: static, absolute, fixed, relative, sticky, initial, inherit;  
   z-index:  900;
 
 }
 
-.toolbarcontainer{
-  position : absolute;
+.tree-toolbarcontainer  {
+	display:flex;
+  flex: auto;
+  justify-content: space-between;
   border-style: solid;
   border : rgba(0,0,0,0.25);
   background-color:  rgba(56,126,245,0.85);
-  top : 0px;
-  overflow : hidden;
   z-Index :  910;
 }
 
-.treecontainer {
-  position : absolute;
-  display : block;
+.treepanel {
+  position : fixed;
+  display : flex;
+  flex-direction: column;
   border  : rgba(0,0,0,0.1);
   border-style: solid;
   background-color : rgba(56,126,245,0.85);
-  overflow-x : scroll;
+  //overflow-x : scroll;
   overflow-y : scroll;
-  top : 0px;
+
 
 
 }
 
 // Top label 
-.itemlabel{
-  position : absolute;
-  top : 10px;
-  left :  48px;
-  background-color : rgb(56,126,245);
-  color : rgb(255, 255, 255);
+.tb-itemlabel   {
+  display : flex;
+	font-size : 14px; 
 
-
-}
-.expandbutton {
-
-  height : 42px;
-  width : 42px;
-  border-radius :5px;
-  border-color: rgb(0,0,0);
-  position : absolute;
-  top : 1px;
-  left :  0px;
-  background-color : rgb(56,126,245);
+  padding-left: 15px;
+  position: fixed;
+  background-color : rgba(56,126,245,0.85);
 
 }
-.closebutton {
-
-
+ .expandbutton   {
+  align-content: flex-start;
   height : 42px;
   width : 42px;
-  border-radius :5px;
-  border-color: rgb(0,0,0);
-  position : absolute;
-  top : 1px;
-  right :  0px;
-  background-color : rgb(56,126,245);
+  background-color : rgba(56,126,245,0.85);
 
+}
+.tb-closebutton   {
+  align-content: flex-end;
+	width : 32px;   
+	height : 32px;
+  background-color : rgba(56,126,245,0.85);
 }
 
 .collapsetree {
